style.css
body {
  width: 100vw;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
}
.element-main-d {
  background-color: #17181a;
}

.element-main-d.light {
  background-color: #FFF;
}

.element-main-d .div {
  background-color: #17181a;
}

.element-main-d.light .div {
  background-color: #FFF;
}

/* footer */
.element-main-d .footer {
  border-radius: 64px 64px 0px 0px;
  background: #101112;
}

.element-main-d .footer .main-div {
  max-width: 1440px;
  margin: auto;
  padding: 42px 48px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .footer .main-div {
    padding: 32px 16px;
  }
  .element-main-d .footer {
    border-radius: 40px 40px 0px 0px;
  }
}

.element-main-d .footer .footer-header .group-9 {
  max-width: 1440px;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  position: relative;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 110px;
  --webkit-gap: 110px;
}

@media screen and (max-width: 1200px) {
  .element-main-d .footer .footer-header .group-9 .navlinks-buttons {
    gap: 50px;
    --webkit-gap: 50px;
  }
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 48px;
  --webkit-gap: 48px;
}
@media screen and (max-width: 1000px) {
  .element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks {
    display: none;
  }
}

@media screen and (max-width: 1150px) {
  .element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks {
    gap: 25px;
    --webkit-gap: 25px;
  }
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  --webkit-gap: 16px;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons * {
  cursor: pointer;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons .toggle-mode {
  background-color: transparent;
  padding: 12px 24px;

  border-radius: 24px;
  border: 1px solid rgba(234, 234, 255, 0.24);
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons .toggle-mode img {
  content: url('./img/togger-dark-mode.svg');
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons .head-buyvxl {
  border-radius: 24px;
  border: 1px solid rgba(234, 234, 255, 0.08);
  background: #907ACC;
  padding: 12px 24px;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  --webkit-gap: 8px;

  color: #FFF;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .buttons .head-buyvxl img {
  content: url("./img/north-east-dark-24.svg");
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks a {
  cursor: pointer;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks .text-wrapper-headerlink {
  font-family: "Manrope", Helvetica;
  font-weight: 500;
  color: #ffffff;
  font-size: 16px;
  text-align: center;
  letter-spacing: 0;
  line-height: 24px;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks .text-wrapper-headerlink-withicon {
  font-family: "Manrope", Helvetica;
  font-weight: 500;
  color: #ffffff;
  font-size: 16px;
  text-align: center;
  letter-spacing: 0;
  line-height: 24px;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  --webkit-gap: 8px;
}

.element-main-d .footer .footer-header .group-9 .navlinks-buttons .navlinks .text-wrapper-headerlink-withicon img {
  content: url("./img/north-east-dark-20.svg");
}

.element-main-d .footer .main-div .contact {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;

  margin-top: 42px;
  margin-bottom: 40px;
}

@media screen and (max-width: 700px) {
  .element-main-d .footer .main-div .contact {
    flex-direction: column;
  }
}

.element-main-d .footer .main-div .contact .mail-address {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 155px;
  --webkit-gap: 155px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .footer .main-div .contact .mail-address {
    gap: 50px;
    --webkit-gap: 50px;
  }
}

@media screen and (max-width: 700px) {
  .element-main-d .footer .main-div .contact .mail-address {
    flex-direction: column;
    gap: 24px;
    --webkit-gap: 24px;
  }
}

.element-main-d .footer .main-div .contact .mail-address .mail p:nth-child(1) {
  color: rgba(234, 234, 255, 0.40);
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
}

.element-main-d .footer .main-div .contact .mail-address .mail p:nth-child(2) {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px
}

.element-main-d .footer .main-div .contact .mail-address .address p:nth-child(1) {
  color: rgba(234, 234, 255, 0.40);
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
}

.element-main-d .footer .main-div .contact .mail-address .address p:nth-child(2) {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
  width: 264px;
}

.element-main-d .footer .main-div .contact .social {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 24px;
  --webkit-gap: 24px;
}
/* ... */

